<resources>
    <string name="app_name">Chatify</string>
    <string name="Register_username">Username</string>
    <string name="Register_password">Password</string>
    <string name="Register_repeat_password">Repeat password</string>
    <string name="Register_nickname">Nickname</string>
    <string name="Register_profile_picture">profile picture</string>
    <string name="Register_upload_image">Choose profile picture</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="Contact_display_name">Display name</string>
    <string name="title_activity_opening_screen">OpeningScreen</string>
    <string name="Login_not_register">Not registered? Click here to register</string>
    <string name="Register_already_registered">Already registered? Click here to log in</string>
    <string name="addContact">Add Contact</string>
    <string name="addContactTitle">Who do u wanna chat?</string>
    <string name="type_a_message">Type a message</string>
    <string name="contact_name">Contact name</string>
    <string name="back_button">back button</string>
    <string name="send_message">Send message</string>
    <string name="chats">Chats</string>
    <string name="remove_contact_button">remove contact button</string>
    <string name="add_contact_button">add contact button</string>
    <string name="settings_button">settings button</string>
    <string name="deleteContactTitle">Who bugs you too much?</string>
    <string name="deleteContact">Delete Chat</string>
    <string name="contact_s_name">Contact\'s name</string>
    <string name="this_is_the_last_message">This is the last message</string>
    <string name="send_date">00:00</string>
    <string name="sent_message">Sent message</string>
    <string name="received_message">received message</string>
    <string name="settings_icon">settings_icon</string>
    <string name="settings">Settings</string>
    <string name="closeSettingsBtn">close the setting activity back to the contacts screen</string>
    <string name="change_server">Change server</string>
    <string name="server">Server</string>
    <string name="choose_a_server_url_to_work_with">Choose a server url to work with</string>
    <string name="url_format">in the next format: http://10.0.2.2:5000/api/</string>
    <string name="change">Change</string>
    <string name="change_theme">Change theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="dark_mode">Dark mode</string>
    <string name="note_changing_to_dark_mode_may_require_login">Note: Changing to dark mode may require login</string>
</resources>