<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LAYOUT"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Register_username"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Register_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="15dp"/>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BUTTON"
            android:layout_gravity="center_horizontal"
            android:scrollbarSize="100dp"
            android:text="@string/login"
            android:padding="15dp" />

        <TextView
            android:id="@+id/LoginLinkToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:text="@string/Login_not_register"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>